Add backend logic for undoable cropping

Also separate mousePath (interactive path) and visualRect from Traits::Geometry into Traits::Interactive and Traits::Visual. Needed to be able to have geometry without visibility or interactivity in a history item.

BUG: 481435